# HW-Django

./: .env.sample  README.md  blog_fixture.json  catalog_fixture.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/management/commands/: add_blog_testdata.py
blog/migrations/: 0001_initial.py  0002_alter_blog_preview_alter_blog_views_count.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_catalog_testdata.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0003_alter_product_options_product_owner_product_status.py
catalog/templates/: base.html  contacts.html  header.html  header_nav.html  home.html  index.html  product.html  product_detail.html
catalog/templates/catalog/: base.html  category_list.html  category_nav.html  contacts.html  footer.html  header.html  header_nav.html  index.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: add_moderator_group.py  csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/users/: login.html  user_form.html
