[tool.poetry]
name = "Jango-mag"
version = "0.1.0"
description = ""
authors = ["Arsenty Dafintsev <aaapython24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry-core = "^2.1.3"
django = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
