[tool.poetry]
name = "Jango-mag"
version = "0.1.0"
description = ""
authors = ["Arsenty Dafintsev <aaapython24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry-core = "^2.1.3"
django = "^5.2.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
pillow = "^11.2.1"
ipython = "^9.2.0"
django-phonenumber-field = "^8.1.0"
phonenumberslite = "^9.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
